--- a/front/src/styles/pages.css
+++ b/front/src/styles/pages.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    justify-content: center;
-    align-items: center;
+    min-height: 100vh;
 }
 .container-img-avalie{
     display: flex;
