--- a/front/src/styles/admin/avaliacoes.css
+++ b/front/src/styles/admin/avaliacoes.css
@@ -4,7 +4,15 @@
   --amarelo: #ffd300;
   --branco: #ffffff;
 }
-
+.btn-exportar{
+  background-color: var(--amarelo) !important;
+  color: #000 !important;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
 /* Container geral */
 .container-avaliacoes {
   padding: 1rem;
